--- a/style.css
+++ b/style.css
@@ -41,17 +41,16 @@ body
 
 .header 
 {
-    border: 0px solid;
     position: fixed;
     top: 0;
-    Left: 0;
-    right: 0;
-    z-index: 1000;
+    left: 0;
+    width: 100%;
+    padding: 1rem 9%;
+    background: var(--black-color);
     display: flex;
-    align-items: center;
     justify-content: space-between;
-    padding: 1rem 10%;
-    background-color: #000000;
+    align-items: center;
+    z-index: 100;
 }
 
 .header.sticky 
@@ -63,7 +62,7 @@ body
 {
     font-size: 2rem;
     color: var( --main-color);
-    font-weight: 800;
+    font-weight: 600;
     cursor: default;
 }
 
@@ -72,7 +71,7 @@ body
 .navbar a 
 {
     font-size: 1.5rem;
-    color: var(--bg-color);
+    color: var( --main-color);
     margin-left: 3.5rem;
     transition: .10s;
 }
@@ -87,7 +86,7 @@ body
 #menu-icon 
 {
     font-size: 3.6rem;
-    color: var(--text-color);
+    color: var( --bg-color);
     display: none;
 }
 
@@ -132,7 +131,7 @@ span
     border-radius: 4rem;
     border: .2rem solid var(--main-color);
     animation:floatImage 4s ease-in-out infinite;
-    margin-top: 2rem;
+   
 }
 
 @keyframes floatImage
@@ -251,7 +250,7 @@ span
 
 .about_image img 
 {
-    width: 18vw;
+    width: 20vw;
     border-radius: 2rem;
     border: .2rem solid var(--main-color);
 }
@@ -622,3 +621,138 @@ span
     font-size: 2.4rem;
     color: var(--second-bg-color);
 }
+
+
+@media (max-width: 1200px) 
+{
+     html 
+    {
+        font-size: 55%;
+    }
+}
+ 
+    
+@media (max-width: 991px) 
+{
+    .header 
+    {
+        padding: 2rem 3%;
+    }
+    section 
+    {
+        padding: 2rem 3% 2rem;
+    }
+    .footer
+    {
+        padding: 2rem 3%;
+    }
+
+    .Contact 
+    {
+        min-height: auto;
+    }
+}
+    
+@media (max-width: 768px) 
+{
+    #menu-icon 
+    {
+        display: block;
+    }
+    .navbar 
+    {
+        position: absolute;
+        top: 100%;
+        left: 0;
+        width: 100%;
+        padding: 1rem 3%;
+        background: var(--bg-color);
+        border-top: .1rem solid rgba(0, 0, 0, .2);
+        box-shadow: 0.5rem 1rem ☐ rgba(0, 0, 0, 2);
+        display: none;
+    }
+
+    .navbar.active 
+    {
+        display: block;
+    }
+
+    .navbar a 
+    {
+        display: block;
+        font-size: 2rem;
+        margin: 3rem 0;
+    }
+
+    .home 
+    {
+        flex-direction: column;
+    }
+
+    .home-content h3 
+    {
+        font-size: 2.6rem;
+    }
+
+    .home-content h1 
+    {
+        font-size: 5rem;
+    }
+    .home-img img 
+    {
+        width:70vw;
+        margin-top: 4rem;
+    }
+
+    .About 
+    {
+        flex-direction: column-reverse;
+    }
+    .About-img img 
+    {
+        width: 70vw;
+        margin-top: 4rem;
+    }
+
+    .Contact 
+    {
+        min-height: auto;
+    }
+
+    
+}
+    
+@media (max-width: 450px) 
+{
+    html 
+    {
+        font-size: 50%;
+    }
+    .Contact form .input-box input 
+    {
+        width: 100%;
+    }
+}
+    
+@media (max-width: 365px) 
+{
+    .home-img img 
+    {
+        width: 90vw;
+    }
+    .About-img img 
+    {
+        width: 90vw;
+    }
+    .footer 
+    {
+        flex-direction: column-reverse;
+    }
+
+    .footer p 
+    {
+        text-align: center;
+        margin-top: 2rem;
+    }
+}
+    
