--- a/style.css
+++ b/style.css
@@ -484,6 +484,33 @@ span
     user-select: none;
 }
 
+.styled-link 
+{
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 3rem;
+    height: 3rem;
+    background-color: transparent;
+    border: .2rem solid var(--main-color);
+    border-radius: 50%;
+    font-size: 2rem;
+    color: var(--main-color);
+    margin: 0rem 1.5rem 0rem 0;
+    transition: .5s ease;
+}
+
+.styled-link:hover 
+{
+    background: var(--main-color);
+    color: var(--second-bg-color);
+    box-shadow: 0 0 1rem var(--main-color);
+}
+
+.styled-link i 
+{
+    margin-right: 5px;
+}
 
 
 .contact
@@ -733,16 +760,16 @@ span
 
     .Project_card_img 
     {
-        width: 200px; /* Adjust card width for very small screens */
-        height: 100px; /* Adjust card height for very small screens */
+        width: 200px; 
+        height: 100px; 
     }
     
     .Project-container 
     {
-        width: 70%; /* Adjust container width for very small screens */
     }
 }
-    
+
+
 @media (max-width: 365px) 
 {
     .home-img img 
@@ -770,15 +797,21 @@ span
         padding: 10px;
     }
 
+    .styled-link
+    {
+        width: 20%;
+        justify-content: center;
+    }
+
     .Project_card_img 
     {
-        width: 180px; /* Adjust card width for extra small screens */
-        height: 90px; /* Adjust card height for extra small screens */
+        width: 180px; 
+        height: 90px; 
     }
     
     .Project-container 
     {
-        width: 80%; /* Adjust container width for extra small screens */
+        width: 80%; 
     }
 }
     
